# nichess-cpp

./: CMakeLists.txt
include/nichess/: constants.hpp  gamecache.hpp  nichess.hpp  util.hpp  zobrist.hpp
src/: gamecache.cpp  nichess.cpp  util.cpp  zobrist.cpp
test/: CMakeLists.txt  README.md  legalactionstest.cpp  othertest.cpp  undoactionstest.cpp
